# code

./: README.md
3d viewer/: 3d_viewer_2.0.cpp
3d viewer/controller/: controller.cpp
3d viewer/desktop/: Makefile.viewer  mainwindow.h  mainwindow.ui
Rogue/: pom.xml
TikTakToe/exercise/: build.gradle
algoritm/Maze/: Makefile  grot.c  grot.h  grot_generate.c  maze.c  maze.h
algoritm/SimpleNavigator/: Makefile  common.h  main.c  main.h  s21_containers.c  s21_containers.h  s21_graph.c  s21_graph.h  s21_graph_algorithms.c  s21_graph_algorithms.h
brick game (tetris+snake)/: menu.sh
brick game (tetris+snake)/tests/: test_snake.cpp  test_tetris.cpp
c/3d_viewer/: 3d_viewer.c  setting.txt
c/decimal/: s21_decimal.c  s21_round.c  s21_types.h
containers/: s21_containersplus.hpp
containers/s21_list/: s21_list.hpp  s21_list.tpp
containers/s21_set/: s21_multiset.hpp
containers/s21_stack/: s21_stack.tpp
containers/tests/: test_stack.cpp
cpp/containers/: Makefile  s21_containers.hpp
group/Rogue/: Dockerfile  RogueForLinux.sh
individual/cpp/brick game (tetris+snake)/: CMakeLists.txt  Makefile
individual/cpp/brick game (tetris+snake)/brick_game/snake/: controller.cpp  snake_fsm.cpp  snake_fsm.hpp  snake_model.hpp
individual/cpp/brick game (tetris+snake)/brick_game/tetris/: controller.c  tetris_backend.h  tetris_defines.h  tetris_matrix.h
individual/cpp/brick game (tetris+snake)/gui/desktop/: View.cpp
individual/cpp/brick game (tetris+snake)/tests/: test_controller.cpp
java/Rogue/: Makefile
java/UnoSoft/: result.txt  settings.gradle.kts
(+340 files in other folders)
